@@ -1,3 +1,0 @@
-[archive]
-main-class="org.company.app.hello.Hello"
-
